2018.6/_sources/plugins/available/phylogeny/raxml-rapid-bootstrap.txt
raxml-rapid-bootstrap: Construct a phylogenetic tree with bootstrap supports using RAxML.
=========================================================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: phylogeny:raxml-rapid-bootstrap.bib
   :all:
   :keyprefix: phylogeny:raxml-rapid-bootstrap:
   :labelprefix: phylogeny:raxml-rapid-bootstrap:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime phylogeny raxml-rapid-bootstrap [OPTIONS]

     Construct a phylogenetic tree with RAxML with the addition of rapid
     bootstrapping support values.

   Options:
     --i-alignment ARTIFACT PATH FeatureData[AlignedSequence]
                                     Aligned sequences to be used for
                                     phylogenetic reconstruction.  [required]
     --p-seed INTEGER                Random number seed for the parsimony
                                     starting tree. This allows you to reproduce
                                     tree results. If not supplied then one will
                                     be randomly chosen.  [optional]
     --p-rapid-bootstrap-seed INTEGER
                                     Specify a random seed for
                                     rapid bootstrapping. This allows you to
                                     reproduce rapid bootstrap results. If not
                                     supplied then one will be randomly chosen.
                                     [optional]
     --p-bootstrap-replicates INTEGER RANGE
                                     The number of bootstrap searches to perform.
                                     [default: 100]
     --p-n-threads INTEGER RANGE     The number of threads to use for
                                     multithreaded processing. Using more than
                                     one thread will enable the PTHREADS version
                                     of RAxML.  [default: 1]
     --p-substitution-model [GTRGAMMA|GTRCATI|GTRCAT|GTRGAMMAI]
                                     Model of Nucleotide Substitution  [default:
                                     GTRGAMMA]
     --o-tree ARTIFACT PATH Phylogeny[Unrooted]
                                     The resulting phylogenetic tree.  [required
                                     if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Construct a phylogenetic tree with bootstrap supports using RAxML.

   Construct a phylogenetic tree with RAxML with the addition of rapid
   bootstrapping support values.

   Parameters
   ----------
   alignment : FeatureData[AlignedSequence]
       Aligned sequences to be used for phylogenetic reconstruction.
   seed : Int, optional
       Random number seed for the parsimony starting tree. This allows you to
       reproduce tree results. If not supplied then one will be randomly
       chosen.
   rapid_bootstrap_seed : Int, optional
       Specify a random seed for rapid bootstrapping. This allows you to
       reproduce rapid bootstrap results. If not supplied then one will be
       randomly chosen.
   bootstrap_replicates : Int % Range(10, None), optional
       The number of bootstrap searches to perform.
   n_threads : Int % Range(1, None), optional
       The number of threads to use for multithreaded processing. Using more
       than one thread will enable the PTHREADS version of RAxML.
   substitution_model : Str % Choices({'GTRCAT', 'GTRCATI', 'GTRGAMMA', 'GTRGAMMAI'}), optional
       Model of Nucleotide Substitution

   Returns
   -------
   tree : Phylogeny[Unrooted]
       The resulting phylogenetic tree.</pre>
       </div>
     </div>
   </div>